# mlx2coreai

./: .gitignore  README.md  pyproject.toml
docs/: op_coverage.md
mlx2coreai/: __init__.py  _composite_declaration.py  _convert_mlx_lm.py  _convert_mlx_lm_stateful.py  cli.py  conversion.py  dynamic_shapes.py  from_mlx.py  ir.py  lower_to_coreai.py  op_coverage.py  op_registry.py  passes.py  reporting.py  runtime.py
scripts/: benchmark_aimodel_sampling.py  benchmark_aimodel_sampling_coreai.swift
tests/: coverage_zoo.py  model_zoo.py  test_convert_mlx_lm.py  test_lower_to_coreai_smoke.py  test_mlx2coreml_zoo_assets.py  test_op_coverage.py  test_op_coverage_report.py  test_runtime.py
