[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx2coreai"
version = "0.1.0"
description = "Experimental MLX to CoreAI conversion pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "coreai-core==1.0.0b1",
    "ml-dtypes",
    "numpy",
]

[project.optional-dependencies]
mlx = [
    "mlx",
]
lm = [
    "mlx-lm",
]
test = [
    "pytest",
]

[project.scripts]
mlx2coreai = "mlx2coreai.cli:main"
mlx2coreai-convert-mlx-lm = "mlx2coreai._convert_mlx_lm:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["mlx2coreai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--tb=short"]
