[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx2coreai"
version = "0.1.0"
description = "Convert MLX models to CoreAI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Lucas Newman", email = "lucasnewman@me.com" },
]
keywords = [
    "artificial intelligence",
    "coreai",
    "machine learning",
    "mlx",
]
dependencies = [
    "coreai-core==1.0.0b1",
    "ml-dtypes",
    "mlx",
    "mlx-lm",
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
mlx2coreai = "mlx2coreai.cli:main"
mlx2coreai-convert-mlx-lm = "mlx2coreai._convert_mlx_lm:main"
mlx2coreai-convert-mlx-lm-stateful = "mlx2coreai._convert_mlx_lm_stateful:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["mlx2coreai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--tb=short"]
